<resources>
    <string name="app_name">Активиум</string>
    <string name="error_api">Произошла ошибка на сервере…</string>
    <string name="error_internet">Нет подключения к интернету</string>
    <string name="error_server">Сервер в данное время недоступен</string>
    <string name="ok">Ок</string>
    <string name="notification_broadcast_title">Фоновое действие</string>
    <string name="notification_broadcast_success_text">Успешно выполнено</string>
    <string name="notification_broadcast_unsuccess_text">Ошибка при выполнении, откройте приложение</string>
    <string name="notification_broadcast_unknown_text">Кнопка не поддерживается в данной версии приложения</string>
    <string name="change_active_child">Профиль сменен на %1$s</string>
    <string name="title_dialog_permission_dnevnik_notifications">Разрешение на уведомления</string>
    <string name="message_dialog_permission_dnevnik_notifications">Предоставьте разрешения на уведомления. Если окно не откроется, посетите настройки</string>
    <string name="button_dialog_permission_dnevnik_notifications">Предоставить</string>
    <string name="hello">Активиум — это приложение для школьников, которое поможет всегда узнавать о новых оценках, не забывать о внеурочных занятиях и быть в курсе всех мероприятий</string>
    <string name="login_with_dnevnik">Войти через Дневник.ру</string>
    <string name="error_login">Произошла ошибка при попытке авторизоваться</string>
    <string name="highlight_person">Выделить</string>
    <string name="unhighlight_person">Снять</string>
    <string name="title_dialog_highlight_at_marks">Выделить одноклассника</string>
    <string name="message_dialog_highlight_at_marks">Выделение одноклассников можно сделать на странице Оценок</string>
    <string name="menu_item_schedule">Расписание</string>
    <string name="lesson_number">%1$d.</string>
    <string name="homework_emoji">✏️</string>
    <string name="homework_document_emoji">📎</string>
    <string name="homework_document_not_found">Файл</string>
    <string name="note_emoji">📝</string>
    <string name="error_schedule">Произошла ошибка при загрузке расписания</string>
    <string name="note_not_found">Заметка отсутствует</string>
    <string name="lesson_note_add">Добавить заметку</string>
    <string name="lesson_note_edit">Изменить заметку</string>
    <string name="lesson_note_delete">Удалить заметку</string>
    <string name="send_praise">Похвалить ребенка</string>
    <string name="open_rating">Другие оценки за урок</string>
    <string name="open_lesson_dnevnikru">Открыть в Дневнике.ру</string>
    <string name="title_dialog_create_note">Добавить заметку</string>
    <string name="title_dialog_edit_note">Изменить заметку</string>
    <string name="message_dialog_create_note">Напишите текст заметки</string>
    <string name="switch_public_note">Показывать заметку родителю</string>
    <string name="note_remind_in">Напоминание</string>
    <string name="note_remind_datetime">Выбрать</string>
    <string name="note_remind_datetime_format">%1$s в %2$s</string>
    <string name="title_dialog_note_remind_date_editor">Выберите дату</string>
    <string name="title_dialog_note_remind_time_editor">Выберите время</string>
    <string name="button_dialog_create_note">Сохранить заметку</string>
    <string name="error_note">Произошла ошибка при сохранении заметки</string>
    <string name="error_delete_note">Произошла ошибка при удалении заметки</string>
    <string name="title_dialog_no_note_text">Пустая заметка</string>
    <string name="message_dialog_no_note_text">Нельзя создать заметку с пустым текстом</string>
    <string name="button_dialog_no_note_text">А, точно!</string>
    <string name="title_dialog_delete_note">Удалить заметку</string>
    <string name="message_dialog_delete_note">Удалить заметку об уроке? Это действие нельзя отменить!</string>
    <string name="button_dialog_delete_note">Да, удалить</string>
    <string name="title_dialog_send_praise">Похвалить ребенка</string>
    <string name="message_dialog_send_praise">Напишите сообщение (необязательно)</string>
    <string name="button_dialog_send_praise">Похвалить</string>
    <string name="praise_text_counter">%1$d/%2$d</string>
    <string name="praise_sent">Похвала отправлена</string>
    <string name="error_praise">Произошла ошибка при отправке похвалы</string>
    <string name="my_mark">Ваша оценка:</string>
    <string name="my_marks">Ваши оценки:</string>
    <string name="person_number">%1$d.</string>
    <string name="rating_info">Оценки класса по предмету %1$s (%2$s)%3$s</string>
    <string name="rating_info_time">. Вам выставили %1$s</string>
    <string name="avg_group_lesson_mark">Средний балл класса на уроке:</string>
    <string name="avg_group_work_mark">В среднем по классу:</string>
    <string name="error_lesson_rating_stats">Произошла ошибка при загрузке статистики урока</string>
    <string name="menu_item_marks">Оценки</string>
    <string name="class_rating">📊 Рейтинг в классе</string>
    <string name="old_mark_info">Прошлое место в рейтинге</string>
    <string name="marks_current">Текущий период</string>
    <string name="marks_year">Год</string>
    <string name="last_mark_detail_no_work">За %1$s</string>
    <string name="last_mark_detail">%1$s за %2$s</string>
    <string name="subject_rating_info">Рейтинг в классе по предмету %1$s</string>
    <string name="class_rating_info">Общий рейтинг в классе по всем предметам</string>
    <string name="error_marks">Произошла ошибка при загрузке оценок</string>
    <string name="menu_item_school">Актив</string>
    <string name="no_school_posts">Пока что здесь нет публикаций. Как только Ваше учебное заведение опубликует новость, ее можно будет прочитать на этой странице</string>
    <string name="error_mark_school_post">Произошла ошибка при пометке поста</string>
    <string name="error_new_school_posts">Произошла ошибка при проверке новых постов</string>
    <string name="error_school_posts">Произошла ошибка при получении школьных постов</string>
    <string name="school_post_updated">· изменено</string>
    <string name="school_post_schedule">📅 Мероприятие: %1$s</string>
    <string name="school_post_viewings">👁 %1$d</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="settings">Настройки</string>
    <string name="settings_theme">Использовать темную тему</string>
    <string name="settings_ea_notifications">Напоминать о внеурочных занятиях</string>
    <string name="settings_marks_notifications">Уведомлять о новых оценках</string>
    <string name="error_marks_notifications">Произошла ошибка при загрузке статуса уведомлений о новых оценках</string>
    <string name="error_ea_notifications">Произошла ошибка при загрузке статуса уведомлений о внеурочных занятиях</string>
    <string name="settings_show_null_subject_marks">Показывать предметы без оценок</string>
    <string name="settings_schedule_period">Диапазон расписания</string>
    <string name="schedule_range_label_today">сегодня</string>
    <string name="schedule_range_label_tomorrow">завтра</string>
    <string name="schedule_range_label_from">%1$d до</string>
    <string name="schedule_range_label_to">%1$d после</string>
    <string name="settings_schedule_warning">Большой диапазон расписания влияет на скорость загрузки</string>
    <string name="settings_last_marks_period">Период последних оценок</string>
    <plurals name="last_marks_label">
        <item quantity="one">за %1$d день</item>
        <item quantity="few">за %1$d дня</item>
        <item quantity="many">за %1$d дней</item>
        <item quantity="other">за %1$d дней</item>
        <item quantity="two">за %1$d дня</item>
        <item quantity="zero">за %1$d дней</item>
    </plurals>
    <string name="settings_last_marks_warning">Большой период последних оценок влияет на скорость загрузки</string>
    <string name="update">⚠️ Обновление</string>
    <string name="update_description">%1$s (%2$d)\n%3$s</string>
    <string name="update_button">Обновить</string>
    <string name="button_dialog_new_version">Настройки</string>
    <string name="error_check_version">Произошла ошибка при проверке версии</string>
    <string name="error_info_notifications">Произошла ошибка при загрузке личных уведомлений</string>
    <string name="active_profile">Активный профиль</string>
    <string name="load_active_profile">Загрузка…</string>
    <string name="content_description_arrow">v</string>
    <string name="select_profile">Выберите активный профиль</string>
    <string name="no_child">Не выбран</string>
    <string name="error_children">Произошла ошибка при загрузке активного профиля</string>
    <string name="review">Отзыв</string>
    <string name="review_meta">%1$s • %2$s%3$s</string>
    <string name="review_edit_marker">изменен</string>
    <string name="review_moderation_marker">на модерации</string>
    <string name="write_review">Написать отзыв</string>
    <string name="edit_review">Изменить отзыв</string>
    <string name="delete_review">Удалить отзыв</string>
    <string name="open_all_reviews">Открыть отзывы на сайте</string>
    <string name="error_review">Произошла ошибка при загрузке отзыва</string>
    <string name="review_editor_new_title">Написать отзыв</string>
    <string name="review_editor_edit_title">Изменить отзыв</string>
    <string name="review_text_counter">%1$d/%2$d</string>
    <string name="review_text_hint">Напишите отзыв (необязательно)</string>
    <string name="send">Отправить</string>
    <string name="title_dialog_review_no_stars">Оценка</string>
    <string name="message_dialog_review_no_stars">Поставьте от 1 до 5 звезд, пожалуйста</string>
    <string name="button_dialog_review_no_stars">А, точно!</string>
    <string name="message_dialog_review_sent">Отзыв отправлен на модерацию. После проверки вам придет уведомление</string>
    <string name="button_dialog_review_sent">Ок</string>
    <string name="title_dialog_review_sent">Отзыв отправлен</string>
    <string name="error_create_review">Произошла ошибка при отправке отзыва</string>
    <string name="message_dialog_delete_review">Удалить Ваш отзыв? Это действие нельзя отменить!</string>
    <string name="button_dialog_delete_review">Да, удалить</string>
    <string name="error_delete_review">Произошла ошибка при удалении отзыва</string>
    <string name="referral">Приглашения</string>
    <string name="referral_info">Приглашайте своих друзей и знакомых в Активиум по реферальной ссылке</string>
    <string name="referral_count_zero">🤜🤛 Вы не приглашали друзей</string>
    <plurals name="referral_count">
        <item quantity="one">🤜🤛 Вы пригласили %1$d друга</item>
        <item quantity="few">🤜🤛 Вы пригласили %1$d друга</item>
        <item quantity="many">🤜🤛 Вы пригласили %1$d друзей</item>
        <item quantity="other">🤜🤛 Вы пригласили %1$d друзей</item>
        <item quantity="two">🤜🤛 Вы пригласили %1$d друга</item>
    </plurals>
    <string name="active_relatives_children">🧒 Дети в %1$s: %2$d из %3$d</string>
    <string name="all_active_relatives_children">🧒 Ваши дети уже в %1$s!</string>
    <string name="active_relatives_parents">👩👨 Родители в %1$s: %2$d из %3$d</string>
    <string name="all_active_relatives_parents">👩👨 Ваши родители уже в %1$s!</string>
    <string name="me_referral">📥 Вас пригласили: %1$s</string>
    <string name="share">Пригласить</string>
    <string name="share_text">Я приглашаю в Активиум — приложения для учеников и их родителей\n\nСкачивание на сайте: %1$s</string>
    <string name="error_referral">Произошла ошибка при загрузке реферальной программы</string>
    <string name="account">Аккаунт</string>
    <string name="default_version">Версия: 0.0.1</string>
    <string name="default_android">Android</string>
    <string name="developer">Разработчик: Максим Дрючин, 2026</string>
</resources>